frontoffice home check

--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -1,18 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<main>
 
-    <div>
+<main class="container">
+
         <div class="main-content ">
-        <h1>403 : Accès refusé </h1>
-         </div>
-
-        <div class="text-center">
-        <p> Dame Séli vous refuse l'accès. Et vous refuse aussi des couvertures. </p>
+            <h1>403 : Accès refusé </h1>
         </div>
 
-   
-    </div>
-    </main>
+        <div class="text-center">
+            <p> Dame Séli vous refuse l'accès. Et vous refuse aussi des couvertures. </p>
+        </div>   
+
+</main>
+
 {% endblock %}
