--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,20 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
 <main>
 
-<div>
+        <div class="main-content">
+            <h1>Erreur 404: non  m-5trouvé <h1>
+        </div>
 
-     <div class="main-content ">
-    <h1>Erreur 404: non trouvé <h1>
-     </div>
-     <div class="text-center">
-     <p>"Le Graal, je sais pas où il est mais il va y rester un moment, c'est moi qui vous l'dis !" <p>
-    
-    <p><em>Alexandre Astier, Kaamelott, Livre III, La mission, écrit par Alexandre Astier</em></p>
-    </div>
+        <div class="text-center">
+            <p>"Le Graal, je sais pas où il est mais il va y rester un moment, c'est moi qui vous l'dis !" <p>
+            <p><em>Alexandre Astier, Kaamelott, Livre III, La mission, écrit par Alexandre Astier</em></p>
+        </div>
 
-   
-    </div>
-    </main>
+</main>
+
 {% endblock %}
