--- a/templates/frontoffice/home/iconographyIndex.html.twig
+++ b/templates/frontoffice/home/iconographyIndex.html.twig
@@ -4,72 +4,65 @@
 
 {% block body %}
 <main class="p-3 ">
-   
-    {# todo Modifier la couleur bleu de la barre active #}
+
     <h2 class="name main__item text-secondary">Iconographies</h2>
 
-        <div class="accordion accordion-flush " id="accordionFlushExample">
-            <div class="accordion-item ">
-                <h2 class="accordion-header ">
-                <button class="accordion-button collapsed text-bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Iconographie des images générales
-                </button>
-                
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item iconono"><strong>- Background :</strong> Background_Kaamelott.jpg, Publié sur Facebook compte officiel de Kaamelott — https://www.facebook.com/KaamelottOff/photos/370926179635876 </li>
-                            <li class="list-group-item iconono"><strong>- Background :</strong> pexels-pixabay-221516.jpg, Libre d'utilisation — https://www.pexels.com/fr-fr/photo/silhouette-d-arbres-sur-la-foret-221516/ </li>
-                            <li class="list-group-item iconono"><strong>- Background :</strong> "excalibur-g96a16a51f_1920.jpg", "Images sponsorisées iStock — https://pixabay.com/fr/illustrations/excalibur-chevalier-moyen-%c3%a2ge-1962505/" </li>
-                            <li class="list-group-item iconono"><strong>- Favicon :</strong> Publié sur Facebook compte officiel de Kaamelott — https://www.facebook.com/KaamelottOff/photos/1953214004740411?locale=fr_F </li>
-                            <li class="list-group-item iconono"><strong>- Icon :</strong> "excalibur.png", "Medieval icons created by max.icons - Flaticon — https://www.flaticon.com/free-icons/medieval" </li>
-                            <li class="list-group-item iconono"><strong>- Icon :</strong> "king.png", "King icons created by Freepik - Flaticon — https://www.flaticon.com/free-icons/king "</li>
-                            <li class="list-group-item iconono"><strong>- Icon :</strong> "queen.png", "Queen icons created by Freepik - Flaticon — https://www.flaticon.com/free-icons/queen" </li>
-                            <li class="list-group-item iconono"><strong>- Icon :</strong> "strategy.png", "Chess icons created by Freepik - Flaticon — https://www.flaticon.com/free-icons/chess "</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                <button class="accordion-button collapsed text-bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Acteurs
-                </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <ul class="list-group list-group-flush">
-                        {% for actor in actors %}
-                            {% if actor.picture %}
-                                <li class="list-group-item iconono"><strong>- {{ actor.picture }} : </strong>{{ actor.descriptionPicture }} </li>
-                            {% endif %}
-                        {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                <button class="accordion-button collapsed text-bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Personnages de Kaamelott
-                </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <ul class="list-group list-group-flush">
-                        {% for character in characters %}
-                            {% if character.picture %}
-                                <li class="list-group-item"><strong>- {{ character.picture }} :</strong> {{ character.descriptionPicture }} </li>
-                            {% endif %}
-                        {% endfor %}
-                        </ul>
-                    </div>
+    <div class="accordion accordion-flush " id="accordionFlushExample">
+        <div class="accordion-item ">
+            <h2 class="accordion-header ">
+                <button class="accordion-button collapsed text-bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">Iconographie des images générales</button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item iconono"><strong>- Background :</strong> Background_Kaamelott.jpg, Publié sur Facebook compte officiel de Kaamelott — https://www.facebook.com/KaamelottOff/photos/370926179635876 </li>
+                        <li class="list-group-item iconono"><strong>- Background :</strong> pexels-pixabay-221516.jpg, Libre d'utilisation — https://www.pexels.com/fr-fr/photo/silhouette-d-arbres-sur-la-foret-221516/ </li>
+                        <li class="list-group-item iconono"><strong>- Background :</strong> "excalibur-g96a16a51f_1920.jpg", "Images sponsorisées iStock — https://pixabay.com/fr/illustrations/excalibur-chevalier-moyen-%c3%a2ge-1962505/" </li>
+                        <li class="list-group-item iconono"><strong>- Favicon :</strong> Publié sur Facebook compte officiel de Kaamelott — https://www.facebook.com/KaamelottOff/photos/1953214004740411?locale=fr_F </li>
+                        <li class="list-group-item iconono"><strong>- Icon :</strong> "excalibur.png", "Medieval icons created by max.icons - Flaticon — https://www.flaticon.com/free-icons/medieval" </li>
+                        <li class="list-group-item iconono"><strong>- Icon :</strong> "king.png", "King icons created by Freepik - Flaticon — https://www.flaticon.com/free-icons/king "</li>
+                        <li class="list-group-item iconono"><strong>- Icon :</strong> "queen.png", "Queen icons created by Freepik - Flaticon — https://www.flaticon.com/free-icons/queen" </li>
+                        <li class="list-group-item iconono"><strong>- Icon :</strong> "strategy.png", "Chess icons created by Freepik - Flaticon — https://www.flaticon.com/free-icons/chess "</li>
+                    </ul>
                 </div>
             </div>
         </div>
-    
-    
+
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed text-bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">Acteurs</button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <ul class="list-group list-group-flush">
+                    {% for actor in actors %}
+                        {% if actor.picture %}
+                            <li class="list-group-item iconono"><strong>- {{ actor.picture }} : </strong>{{ actor.descriptionPicture }} </li>
+                        {% endif %}
+                    {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed text-bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">Personnages de Kaamelott</button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <ul class="list-group list-group-flush">
+                    {% for character in characters %}
+                        {% if character.picture %}
+                            <li class="list-group-item"><strong>- {{ character.picture }} :</strong> {{ character.descriptionPicture }} </li>
+                        {% endif %}
+                    {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </main>
 
 {% endblock %}
