frontoffice home + personage check

--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -2,9 +2,7 @@
 
 {% block body %}
 
-<main>
-
-    <div>
+<main class="container">
 
         <div class="main-content ">
             <h1>403 : Accès refusé </h1>
@@ -13,8 +11,6 @@
         <div class="text-center">
             <p> Dame Séli vous refuse l'accès. Et vous refuse aussi des couvertures. </p>
         </div>   
-
-    </div>
 
 </main>
 
