--- a/templates/frontoffice/user/register.html.twig
+++ b/templates/frontoffice/user/register.html.twig
@@ -4,27 +4,27 @@
 
 {% block body %}
 
-</main>
+
 <main  class="p-3">
     <div class="text-center mb-3">
     
-    <h2 class="main__item">Inscription</h2>
-  
-    <div class="card mt-3 mb-3"> 
-        <div class="card-body text-bg-secondary">
-            {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
+        <h2 class="main__item">Inscription</h2>
+    
+        <div class="card mt-3 mb-3"> 
+            <div class="card-body text-bg-secondary">
+                {{ form_start(registrationForm) }}
+                    {{ form_row(registrationForm.email) }}
+                    
+                    {{ form_row(registrationForm.plainPassword) }}
+                        <div class="text-start">
+                            {{ form_row(registrationForm.avatar) }}
+                        </div>
+                    <button type="submit" class="btn btn-outline-light">Valider</button>
+                {{ form_end(registrationForm) }}
         
-        {{ form_row(registrationForm.plainPassword) }}
-            <div class="text-start">
-            {{ form_row(registrationForm.avatar) }}
+        
             </div>
-        <button type="submit" class="btn btn-outline-light">Valider</button>
-        {{ form_end(registrationForm) }}
-   
-       
         </div>
     </div>
-
 </main>
 {% endblock %}
