frontoffice nav and profil check ,needs to be check again card_dql ?

--- a/templates/frontoffice/user/profile.html.twig
+++ b/templates/frontoffice/user/profile.html.twig
@@ -12,21 +12,26 @@
         <div class="card mt-3 mb-3"> 
             <div class="card-body text-bg-secondary">
                 {# Results lastest quizz #}
-                <div class=" m-5">
-                    {% if scoreArray is not empty %}
-                        {% for score in scoreArray %}
-                            <p>Votre dernier score pour le quizz {{ score.quizz_id }} est : {{ score.score }}</p>
-                        {% endfor %}
-                    {% else %}
-                        <p>Vous n'avez pas encore joué à nos quizz.</p>
-                    {% endif %}   
+                
+                <div class="card border-light text-bg-secondary m-5-lg p-2">
+                    <h3 class="main__item">score</h3>
+                        {% if scoreArray is not empty %}
+                            {% for score in scoreArray %}
+                                <p>Votre dernier score pour le quizz {{ score.quizz_id }} est : {{ score.score }}</p>
+                            {% endfor %}
+                        {% else %}
+                            <p>Vous n'avez pas encore joué à nos quizz.</p>
+                        {% endif %}   
                 </div>
-                <div class="d-flex justify-content-around">
+                <div class="border-light text-bg-secondary m-5-lg p-2">
+                {# <h3 class="main__item">profil</h3> #}
+                    <div class="d-flex justify-content-around">
 
-                    <a class="btn btn-outline-light" href="{{ path("user_edit_profile", {"id" : user.id}) }}">Modifier</a>
+                        <a class="btn btn-outline-light m-1" href="{{ path("user_edit_profile", {"id" : user.id}) }}">Modifier le profil</a>
 
-                    {{ include('frontoffice/user/_delete_form.html.twig') }}
-                </div>    
+                        {{ include('frontoffice/user/_delete_form.html.twig') }}
+                    </div>   
+                {# </div>  #}
             </div>
         </div>
     </div>
