--- a/templates/frontoffice/user/_delete_form.html.twig
+++ b/templates/frontoffice/user/_delete_form.html.twig
@@ -1,5 +1,5 @@
 
 <form method="post" action="{{ path('user_delete_profile', {'id': user.id}) }}" onsubmit="return confirm('Etes-vous sur de vouloir supprimer votre profil ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn btn-outline-light">Supprimer</button>
+    <button class="btn btn-outline-light m-1">Supprimer le profil</button>
 </form>
