--- a/templates/frontoffice/user/profile.html.twig
+++ b/templates/frontoffice/user/profile.html.twig
@@ -7,7 +7,12 @@
 <main  class="p-3">
     <div class="text-center m-3">
 
-        <h2 class="main__item">Bonjour {{ user.email }} </h2>
+        {% set email = user.email %}
+
+        {% set parts = email|split('@') %}
+        {% set username = parts[0] %}
+
+        <h2 class="main__item">Bonjour {{ username }} </h2>
 
         <div class="card mt-3 mb-3"> 
             <div class="card-body text-bg-secondary">
