--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -12,7 +12,7 @@
 
     <div class="content">
 
-        <div class="row gy-5 main-bo row-cols-3 justify-content-start">
+        <div class="row gy-5 main-bo row-cols-3">
             <div class="col" >
                 <div class="card " style="width: 18rem;">
                     <div class="card-body">
