--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -5,7 +5,7 @@
 <main>
 
         <div class="main-content">
-            <h1>Erreur 404: non  m-5trouvé <h1>
+            <h1>Erreur 404: non trouvé<h1>
         </div>
 
         <div class="text-center">
