--- a/templates/backoffice/user/browse.html.twig
+++ b/templates/backoffice/user/browse.html.twig
@@ -29,7 +29,8 @@
                 <tr>
                     <th scope="row">{{ user.id }}</td>
                     <td>{{ user.email }}</td>
-                    <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                    {# if user.roles exists, displays a json string, if not, displays nothing #}
+                    <td>{{ user.roles ? user.roles|json_encode : '' }}</td> 
                     <td>{{ user.password }}</td>
                     <td>
                     {% if user.avatar is not null %}
