--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,8 @@
         
         {% else %}
             <link href="{{ asset('css/styles_quizz.css')}}" rel="stylesheet">
-            <link href="{{ asset('css/styles.css') }}" rel="stylesheet">     
+            <link href="{{ asset('css/styles.css') }}" rel="stylesheet">    
+
         {% endif %}
  
         {# favicon #}
@@ -56,12 +57,12 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
             <!-- Scripts -->
-            {% if app.request.pathinfo starts with '/quizz' %}
+            {# {% if app.request.pathinfo starts with '/quizz' %} #}
             
                 <script src="{{ asset('main.js')}}"></script>
                 <script src="{{ asset('js/app.js')}}"></script>  
                               
-            {% endif %}
+            {# {% endif %} #}
             
         </div>
     </body>
