--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -17,12 +17,16 @@
                         {# round(0,'floor') give the round number whith zero decimal so it give us the number of the full stars #}
                         {% set biStarFill = rating|round(0, 'floor') %}
                         {# if rating is a float between an integer+0.5 and the next integer "biStarHalf" #}
+                        {# if (rating - biStarFill) is > or = to 0.5, renders true #}
                         {% set biStarHalf = rating - biStarFill >= 0.5 %}
+                        {# Number of empty stars necessary to complete the full ones. If biStarHalf is true, take 1. #}
                         {% set biStar = 5 - biStarFill - (biStarHalf ? 1 : 0) %}
 
+                    {# iteration for all the stars (max 5) #}
                     {% for i in 1..5 %}
                         {% if i <= biStarFill %}
                             {{ '<i class="bi bi-star-fill"></i>' }}
+                        {# if rating = 3.5 ==> i == 4 == (3 + 1 and true) #}
                         {% elseif i == biStarFill + 1 and biStarHalf %}
                             {{ '<i class="bi bi-star-half"></i>' }}
                         {% else %}
@@ -37,7 +41,7 @@
                 <blockquote class="blockquote mb-0">
                 <p>"{{ quote.text }}"</p> 
                                 
-                <footer class="blockquote-footer"> {{ quote.name }},<cite title="Source Title"> <strong>{{ quote.season }}</strong>, {{ quote.episode }}.</cite></footer>
+                <footer class="blockquote-footer">{{ quote.name }},<cite title="Source Title"> <strong>{{ quote.season }}</strong>, {{ quote.episode }}.</cite></footer>
                
                 </blockquote>
             </div>
